Patch up namespace requires; update project deps